--- a/post1.html
+++ b/post1.html
@@ -25,7 +25,7 @@
     <header class="header">
       <div id="navbar">
         <!-- LOGOTYP -->
-        <a href="index5.html"><img src="images/Hannahs logotype.png" alt=""></a>
+        <a href="index.html"><img src="images/Hannahs logotype.png" alt=""></a>
         <!-- NAVLÄNKAR -->
         <div class="navbar-button"> <a href="#home">Home</a>
           <a href="#news">News</a>
