--- a/post2.html
+++ b/post2.html
@@ -123,7 +123,7 @@
 
     <footer class="footer">
       <div class="right">
-        <form action="index5.html">
+        <form action="index.html">
           <button type="submit" class="button-1">Back</button>
         </form>
       </div>
