--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </div>
 
       <!-- SÖKRUTA -->
-      <form action="index5.html" method="GET">
+      <form action="index.html" method="GET">
         <div class="search">
           <input type="text" class="search-input" name="query" placeholder="Sök efter inlägg här!">
           <button type="submit">
